--- a/examples/filters/CMakeLists.txt
+++ b/examples/filters/CMakeLists.txt
@@ -3,3 +3,6 @@ PCL_ADD_EXAMPLE(pcl_example_remove_nan_from_point_cloud FILES example_remove_nan
 
 PCL_ADD_EXAMPLE(pcl_example_extract_indices FILES example_extract_indices.cpp
                 LINK_WITH pcl_common pcl_filters)
+
+PCL_ADD_EXAMPLE(pcl_example_uniform_sampling FILES example_uniform_sampling.cpp
+                LINK_WITH pcl_common pcl_filters pcl_visualization)
